--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -18,6 +18,10 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Lobster+Two:ital@1&display=swap"
+			rel="stylesheet"
+		/>
 
 		<title>Create Lists</title>
 	</head>
@@ -30,49 +34,42 @@
 			</div>
 			<div id="blender" class="expand"></div>
 			<div class="container">
-				<div class="top-half">
-					<div class="owned-lists-container">
-						<h2>Your Lists</h2>
+				<div class="main">
+					<h2 class="font-secondary">Your Lists</h2>
+					<ul>
+						<% lists.forEach( el => { %>
+						<li class="listItem" data-id="<%=el._id%>">
+							<a href="/lists/<%=el._id%>" class="list"><%= el.name %></a>
+							<span class="del"> <i class="fa-solid fa-trash-can"></i> </span>
+						</li>
+						<% }) %>
+					</ul>
+					<div class="sharedYou">
+						<h2 class="font-secondary">Lists Shared With You</h2>
+
+						<% if (sharedLists.length > 0) { %>
 						<ul>
-							<% lists.forEach( el => { %>
+							<% sharedLists.forEach( el => { %>
 							<li class="listItem" data-id="<%=el._id%>">
-								<a href="/lists/<%=el._id%>" class="list"><%= el.name %></a>
-								<span class="del"> <i class="fa-solid fa-trash-can"></i> </span>
+								<a href="/lists/<%=el._id%>" class="list"
+									><%= el.name %> (shared by <%= el.userId.userName %>)
+								</a>
 							</li>
 							<% }) %>
 						</ul>
+						<% } else { %>
+						<p>You haven't been shared a list yet.</p>
+						<% } %>
 					</div>
-					<div class="shared-lists-container">
-						<div class="sharedYou">
-							<h2>Lists Shared With You</h2>
-
-							<% if (sharedLists.length > 0) { %>
-							<ul>
-								<% sharedLists.forEach( el => { %>
-								<li class="listItem" data-id="<%=el._id%>">
-									<a href="/lists/<%=el._id%>" class="list"
-										><%= el.name %> (shared by <%= el.userId.userName %>)
-									</a>
-								</li>
-								<% }) %>
-							</ul>
-							<% } else { %>
-							<p>You haven't been shared a list yet.</p>
-							<% } %>
-						</div>
-					</div>
-				</div>
-					<div class="bottom">
-					<h2>Create a new List</h2>
+					<h2 class="font-secondary">Create a new List</h2>
 					<form action="/lists/createList" method="POST">
 						<input type="text" placeholder="Enter list name" name="name" />
 						<input type="submit" value="Create" />
 					</form>
-				
+
 					<div class="button-container">
 						<a href="/logout">Logout</a>
 					</div>
-				</div>
 				</div>
 			</div>
 		</div>
