--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -17,6 +17,8 @@
 		rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
 	/>
+   
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Lobster+Two:ital@1&display=swap" rel="stylesheet">
 
     <title>To-dos</title>
 </head>
@@ -29,9 +31,9 @@
         </div>
         <div id="blender" class="expand"></div>
         <div class="container">
-            <div class="shared-todos">
-                <h1><%= listName %></h1>
-                <h2>Tasks:</h2>
+            <div class="main">
+                <h1 class="font-secondary"><%= listName %></h1>
+                <h2 class="font-secondary">Tasks:</h2>
                 <ul>
                 <% todos.forEach( el => { %>
                         <li class='todoItem' data-id='<%=el._id%>'>
@@ -43,7 +45,7 @@
 
                 <h3>The list has <%= left %> things left to do.</h3>
 
-                <h3>Add a new task to the list:</h3>
+                <h3 class="font-secondary">Add a new task to the list:</h3>
 
                 <form action="/todos/createTodo/<%= listId %>" method='POST'>
                     <input type="text" placeholder="Enter Todo Item" name='todoItem'>
@@ -51,8 +53,8 @@
                 </form>
 
                 <% if (isOwner) { %>
-                <h2>List Options:</h2>
-                <h3>Users with access:</h3>
+                <h2 class="font-secondary">List Options:</h2>
+                <h3 class="font-secondary">Users with access:</h3>
                 <ul>
                     <% invitedUsers.forEach( user => { %>
                         <li class='todoItem' data-list='<%= listId %>' data-id='<%=user._id%>'>
@@ -61,7 +63,7 @@
                         </li>
                     <% }) %>
                 </ul>
-                <h3>Add someone to this list:</h3>
+                <h3 class="font-secondary">Add someone to this list:</h3>
                 <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
                         <div class="alert alert-danger"><%= el %></div>
